apps/media/flaresolverr/deployment.yaml
#
# Reference:
# https://github.com/sct/overseerr
#

apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: media
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: flaresolverr
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: flaresolverr
  type: ClusterIP
  ports:
    - name: http
      port: 8191
      protocol: TCP
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  namespace: media
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: flaresolverr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: flaresolverr
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: flaresolverr
    spec:
      restartPolicy: Always
      affinity:
      nodeAffinity:
        requiredDuringSchedulingIgnoredDuringExecution:
          nodeSelectorTerms:
            - matchExpressions:
                - key: kubernetes.io/hostname
                  operator: In
                  values:
                    - minas-tirith
                    - minas-tirith-vm
      containers:
        - name: overseerr
          image: ghcr.io/flaresolverr/flaresolverr:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8191
              protocol: TCP
      nodeAffinity:
        required:
          nodeSelectorTerms:
            - matchExpressions:
                - key: kubernetes.io/hostname
                  operator: In
                  values:
                    - minas-tirith
                    - minas-tirith-vm
