apps/media/flaresolverr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flaresolverr-dashboard-https
  namespace: media
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: flaresolverr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`flaresolverr.saldivar.io`)
      middlewares:
        - name: security
          namespace: kube-system
      services:
        - name: flaresolverr
          port: http
